# sat-or-not

./: README.md  pyproject.toml
src/pyframe/: logic.py  main.py
src/satnot/: logic.py  main.py
