[project]
name = "pyframe"
version = "0.1.0"
description = "hacking on frames, in Python"
authors = [
    { name = "karmacoma", email = "karma@coma.lol" }
]
dependencies = [
    "fastapi>=0.109.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pyframe.main:root"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyframe"]
