[project]
name = "pyframe"
version = "0.1.0"
description = "hacking on frames, in Python"
authors = [
    { name = "karmacoma", email = "karma@coma.lol" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0.post1",
    "cairosvg>=2.7.1",
    "z3-solver>=4.12.5.0",
    "python-multipart>=0.0.6",
    "yarl>=1.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pyframe.main:root"
logic = "pyframe.logic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyframe"]
