[project]
name = "sat-or-not"
version = "0.1.0"
description = "hacking on frames, in Python"
authors = [
    { name = "karmacoma", email = "karma@coma.lol" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0.post1",
    "cairosvg>=2.7.1",
    "python-multipart>=0.0.6",
    "yarl>=1.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "satnot.main:root"
logic = "satnot.logic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
    "pytest>=8.0.0",
    "pyright>=1.1.350",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/satnot"]
